Grace/tests/gibbs/errors/t126.grace
// ERROR = L0004
var num := 123.0xff
